--- a/meongmeong_hairshop/pubspec.yaml
+++ b/meongmeong_hairshop/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  flutter_naver_map: ^1.3.0+1
   provider: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
