--- a/meongmeong_hairshop/ios/Runner/Info.plist
+++ b/meongmeong_hairshop/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>이 앱은 사용자가 앱을 사용하는 동안 현재 위치 정보가 필요합니다.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>이 앱은 백그라운드에서 사용자의 위치 정보가 필요합니다.</string>
 </dict>
 </plist>
