--- a/meongmeong_hairshop/pubspec.yaml
+++ b/meongmeong_hairshop/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.3
   flutter_naver_map: ^1.3.0+1
   provider: ^6.0.0
+  geolocator: ^7.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
