--- a/meongmeong_hairshop/pubspec.yaml
+++ b/meongmeong_hairshop/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
+  http: ^1.3.0
   flutter_naver_map: ^1.3.0+1
   provider: ^6.0.0
-  geolocator: ^7.6.2
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  url_launcher: ^6.0.20
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
