--- a/meongmeong_hairshop/pubspec.yaml
+++ b/meongmeong_hairshop/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   url_launcher: ^6.0.20
+  lottie: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,7 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/animations/loading.json
+    - assets/animations/loadingGreyPaw.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
